--- a/pages/master.html
+++ b/pages/master.html
@@ -27,7 +27,7 @@
                 </li>
             </ul>
             <form class="form-inline my-2 my-lg-0" action="../helpers/searcher.php">
-                <input class="form-control mr-sm-2" type="search" name="search"placeholder="Search for songs" aria-label="Search">
+                <input required class="form-control mr-sm-2" type="search" name="search"placeholder="Search for songs" aria-label="Search">
                 <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
             </form>
         </div>
